# RIPE-analysis

./: .gitignore  Cargo.toml  README.md  create_figures.py  dowload-RIPE-data.sh
results/: Figure 1.1.csv  Figure 1.2.csv  Figure 7.csv  Figure 8.csv
results/relationships/: 2000-v4.csv  2001-v4.csv  2002-v4.csv  2003-v4.csv  2003-v6.csv  2004-v4.csv  2005-v4.csv  2005-v6.csv  2006-v4.csv  2007-v4.csv  2007-v6.csv  2008-v4.csv  2008-v6.csv  2009-v4.csv  2009-v6.csv  2010-v4.csv  2010-v6.csv  2011-v4.csv  2011-v6.csv  2012-v4.csv  2012-v6.csv  2013-v4.csv  2013-v6.csv  2014-v4.csv  2014-v6.csv  2015-v4.csv  2015-v6.csv  2016-v4.csv  2016-v6.csv  2017-v4.csv  2017-v6.csv  2018-v4.csv  2018-v6.csv  2019-v4.csv  2019-v6.csv  2020-v4.csv  2020-v6.csv  2021-v4.csv  2021-v6.csv  2022-v4.csv  (+1 more)
src/: main.rs
