[package]
name = "ripe_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["rt", "macros", "rt-multi-thread"] }
